--- a/views/home/index.html
+++ b/views/home/index.html
@@ -51,9 +51,14 @@
     </nav>
     <main>
       <div class="top-text">
-        <h2>Welcome back Instructor name</h2>
-        <h3>Your courses:</h3>
+        <div class="intro-text">
+          <h2>Welcome back Instructor name</h2>
+        </div>
+        <a class="create-button" href="#"
+          ><i class="bi bi-plus-circle"></i> Create a course</a
+        >
       </div>
+      <h3>Your courses:</h3>
       <div class="courses-list">
         <div class="course">
           <div class="course-image-container">
