--- a/views/home/styles.css
+++ b/views/home/styles.css
@@ -10,6 +10,30 @@ main {
   padding: 10px 30px;
   background-color: #f7f9fa;
   margin-bottom: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: center;
+}
+
+.intro-text,
+.intro-text h2 {
+  padding: 0;
+  margin: 0;
+}
+
+.create-button {
+  background-color: #00b3ff;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+h3 {
+  padding: 0px 30px;
 }
 
 .courses-list {
@@ -59,6 +83,7 @@ main {
   border-radius: 3px;
   font-size: 13px;
   background-color: #00b3ff;
+  color: white;
 }
 
 @media (max-width: 576px) {
