--- a/navigation.css
+++ b/navigation.css
@@ -9,6 +9,7 @@ body {
 }
 
 .navbar-container {
+  margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
