linked home screen

--- a/views/auth/login/index.html
+++ b/views/auth/login/index.html
@@ -75,7 +75,7 @@
                 class="password-input form-input"
               />
               <div class="action-buttons">
-                <input class="submit-button" type="submit" value="Login" />
+                <a class="submit-button" href="../../home/index.html">Login</a>
                 <button class="signup-button">Signup</button>
               </div>
             </form>
