--- a/footer.css
+++ b/footer.css
@@ -6,6 +6,12 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.about-footer h3 {
+  padding: 0;
+  margin: 0;
+}
+
 footer {
   width: 100%;
   background-color: #00b3ff;
@@ -50,8 +56,8 @@ hr {
 
 .about-footer {
   color: white;
-  padding: 40px;
   padding-top: 10px;
+  padding: 40px;
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
