--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,8 @@ main {
   justify-content: center;
   flex-grow: 1;
   margin: 10%;
-  height: 80%;
+  height: 85%;
+  min-height: 300px;
   background-size: cover;
   background-position: center;
   color: white;
@@ -82,6 +83,7 @@ main {
   align-items: center;
   justify-content: center;
   gap: 30px;
+  padding: 0 10px;
 }
 
 .button-wrapper a {
