--- a/views/styles.css
+++ b/views/styles.css
@@ -1,5 +1,5 @@
-@import url(navigation.css);
-@import url(footer.css);
+@import url(../navigation.css);
+@import url(../footer.css);
 * {
   box-sizing: border-box;
 }
@@ -50,7 +50,7 @@ main {
 }
 
 .image-container {
-  background-image: url("assets/images/landing.jpg");
+  background-image: url("../assets/images/landing.jpg");
   display: flex;
   flex-direction: column;
   align-items: center;
