Linked pages by creating a route

--- a/views/course/edit/styles.css
+++ b/views/course/edit/styles.css
@@ -1,5 +1,5 @@
-@import url(../../navigation.css);
-@import url(../../footer.css);
+@import url(../../../navigation.css);
+@import url(../../../footer.css);
 body {
   height: 100vh;
 }
