--- a/views/home/styles.css
+++ b/views/home/styles.css
@@ -45,16 +45,15 @@ h3 {
   padding: 10px 25px;
 }
 .course {
-  border: 1px solid #484a4b66;
   border-radius: 5px;
   width: 100%;
   max-width: 350px;
+  border: 1px solid #484a4b66;
   transition: 0.3s;
 }
 
 .course:hover {
-  box-shadow: 0px 0px 10px 0px #484a4b66;
-  max-width: 360px;
+  border: 4px solid #00b3ff;
   transition: 0.3s;
   cursor: pointer;
 }
