--- a/views/error_page.css
+++ b/views/error_page.css
@@ -10,7 +10,7 @@ a {
 }
 .image {
   width: 100%;
-  height: 600px;
+  height: 300px;
   object-fit: contain;
 }
 
@@ -28,6 +28,7 @@ a {
 h1 {
   font-size: 60px;
   margin: 0;
+  margin-top: 5px;
   text-align: center;
 }
 
@@ -35,11 +36,13 @@ h2 {
   font-size: 40px;
   margin-bottom: 0;
   text-align: center;
+  margin-top: 10px;
 }
 
 p {
   font-size: 20px;
   text-align: center;
+  margin-bottom: 0;
 }
 
 .inside-wrapper {
@@ -47,7 +50,7 @@ p {
 }
 
 .home-button {
-  margin: 50px 10px;
+  margin: 20px;
   background-color: #00b3ff;
   color: white;
   padding: 10px 20px;
