--- a/views/auth/signup/styles.css
+++ b/views/auth/signup/styles.css
@@ -72,8 +72,60 @@ main {
   width: 100%;
   flex-direction: column;
   justify-content: space-between;
+  align-items: start;
+  gap: 20px;
+}
+
+.form-error {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 5px;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
+}
+
+.profile-image-container {
+  display: flex;
+  flex-direction: row-reverse;
   align-items: center;
   gap: 20px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.profile-image-preview {
+  width: 120px;
+  height: 120px;
+  margin: 0 auto 10px;
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+}
+
+.profile-image-preview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.profile-image-label {
+  display: block;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.profile-image-input {
+  display: none;
 }
 
 .form-input {
