--- a/navigation.css
+++ b/navigation.css
@@ -59,7 +59,7 @@ body {
   list-style-type: none;
   display: inline-flex;
   align-items: center;
-  column-gap: 20px;
+  column-gap: 10px;
 }
 
 .nav-items ul.site-navigation li.selected,
@@ -118,6 +118,7 @@ body {
 
 .auth-navigation {
   padding-left: 40px;
+  margin: 0;
 }
 
 .auth-navigation .login {
@@ -145,6 +146,13 @@ body {
   background-color: #3e4143;
   cursor: pointer;
   transition: 0.4s;
+}
+
+.profile-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  object-fit: cover;
 }
 
 @media (min-width: 577px) {
