--- a/views/auth/login/styles.css
+++ b/views/auth/login/styles.css
@@ -4,9 +4,11 @@
 * {
   box-sizing: border-box;
 }
+
 a {
   all: unset;
 }
+
 body {
   margin: 0;
   font-family: "Figtree", sans-serif;
@@ -65,6 +67,19 @@ main {
 
 .image-wrapper .logo {
   height: 500px;
+}
+
+.form-error {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 5px;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
 }
 
 .main-form {
