--- a/views/styles.css
+++ b/views/styles.css
@@ -9,105 +9,94 @@ body {
   font-family: "Figtree", sans-serif;
   min-width: 230px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
+  background: repeating-linear-gradient(
+    45deg,
+    #00b3ff 0,
+    #00b3ff 10%,
+    transparent 0,
+    transparent 50%
+  );
+  background-size: 50em 50em;
+  background-color: #ffffff;
+  opacity: 1;
 }
 
 a {
   all: unset;
 }
 
-.top-navigation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 5px 20px;
-  border-bottom: 1px solid #2d2f3153;
-  column-gap: 20px;
-}
-.site-image {
-  height: 40px;
-}
-
 main {
+  background-color: rgb(62, 62, 62);
+  border-radius: 10px;
+  padding: 30px;
   display: flex;
-  flex-direction: column;
-  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  margin: 10%;
 }
 
 .wrapper {
+  max-width: 80%;
   display: flex;
-  align-items: center;
+  gap: 60px;
   justify-content: center;
-  flex-grow: 1;
-}
-
-.button-wrapper {
-  display: flex;
   align-items: center;
-  justify-content: center;
+  flex-wrap: wrap-reverse;
 }
 
 .image-container {
-  background-image: url("../assets/images/landing.jpg");
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.text-container {
+  flex: 3;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
-  margin: 10%;
-  height: 85%;
-  min-height: 300px;
-  background-size: cover;
-  background-position: center;
+}
+
+.image-container img {
+  width: 100%;
+  min-width: 350px;
+  max-width: 400px;
+}
+
+h1 {
+  color: #00b3ff;
+}
+
+h2 {
   color: white;
-  border-radius: 50px;
 }
 
-.text-button-container {
-  background-color: #2d2f31c9;
+.action-container {
   display: flex;
-  width: 100%;
-  flex-direction: column;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
-  border-radius: 50px;
+  justify-content: start;
+  gap: 20px;
 }
 
-.button-wrapper {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-  padding: 0 10px;
-}
-
-.button-wrapper a {
+.button {
   padding: 10px 30px;
-  display: inline-block;
-  text-decoration: none;
-  text-align: center;
+  border-radius: 10px;
 }
 
-.action-button:hover {
-  cursor: pointer;
-}
-
-.login-bottom {
+.login {
   background-color: #00b3ff;
-  border-radius: 5px;
 }
 
-.signup-bottom {
-  background-color: #484a4b;
-  border-radius: 5px;
+.login:hover {
+  background-color: #00b3ffbf;
 }
-@media (max-width: 576px) {
-  .wrapper {
-    margin-top: 50px;
-  }
+
+.signup {
+  background-color: #e8f1fa;
+  color: black;
+}
+
+.signup:hover {
+  background-color: #dce4eddf;
 }
