--- a/views/error_page.css
+++ b/views/error_page.css
@@ -8,6 +8,19 @@
 a {
   all: unset;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .image {
   width: 100%;
   height: 300px;
