--- a/navigation.css
+++ b/navigation.css
@@ -155,6 +155,12 @@ body {
   object-fit: cover;
 }
 
+.logout {
+  background-color: #ff4343;
+  color: white;
+  padding: 5px 10px;
+}
+
 @media (min-width: 577px) {
   .search-bar,
   .main-navigation {
