--- a/navigation.css
+++ b/navigation.css
@@ -159,6 +159,7 @@ body {
   background-color: #ff4343;
   color: white;
   padding: 5px 10px;
+  border-radius: 3px;
 }
 
 @media (min-width: 577px) {
