--- a/views/lesson/create/styles.css
+++ b/views/lesson/create/styles.css
@@ -173,6 +173,46 @@ textarea {
   overflow: hidden;
 }
 
+.form-error {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 5px;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
+}
+
+.slug-display {
+  color: green;
+  font-size: 0.8rem;
+}
+
+.video-section {
+  width: 100%;
+}
+
+.video-progress {
+  width: 100%;
+  height: 30px;
+  background-color: #f7f9fa;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.inner-slider {
+  width: 90%;
+  height: 100%;
+  background-color: #00b3ff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+
 @media (max-width: 576px) {
   .inside-wrapper {
     padding-top: 50px;
