--- a/views/section/styles.css
+++ b/views/section/styles.css
@@ -78,6 +78,17 @@ div.span-container {
   display: flex;
 }
 
+.no-lessons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: 500;
+  grid-column: 1 / -1;
+}
+
 @media (max-width: 577px) {
   main {
     padding-top: 90px;
