--- a/views/course/edit/styles.css
+++ b/views/course/edit/styles.css
@@ -43,8 +43,11 @@ a {
 
 .course-image {
   width: 100%;
-  height: auto;
+  aspect-ratio: 16/9;
   display: block;
+  object-fit: cover;
+  border: 5px solid #00b3ff;
+  border-radius: 3px;
 }
 
 .course-editor {
