--- a/views/course/edit/styles.css
+++ b/views/course/edit/styles.css
@@ -134,6 +134,48 @@ textarea {
   padding: 5px 35px;
 }
 
+.course-image-new {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.image-placeholder {
+  width: 100%;
+  aspect-ratio: 16/9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px dashed #00b3ff;
+  margin-bottom: 15px;
+}
+
+.image-placeholder:hover {
+  cursor: pointer;
+}
+
+.image-icon {
+  font-size: 30px;
+}
+
+.form-error {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 5px;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
+}
+
+.slug-display {
+  color: green;
+  font-size: 0.8rem;
+}
+
 @media (max-width: 576px) {
   .inside-wrapper {
     padding-top: 50px;
