--- a/navigation.css
+++ b/navigation.css
@@ -69,6 +69,10 @@ body {
   flex-wrap: nowrap;
 }
 
+.site-navigation a {
+  width: 100%;
+}
+
 .main-navigation {
   font-size: 0.9em;
   display: inline-flex;
